--- a/theme/about.html
+++ b/theme/about.html
@@ -6,7 +6,7 @@
   <!-- Basic Page Needs
 ================================================== -->
   <meta charset="utf-8">
-  <title>Constra - Construction Html5 Template</title>
+  <title>Quantum - Présentation</title>
 
   <!-- Mobile Specific Metas
 ================================================== -->
@@ -152,7 +152,7 @@
                             <ul class="dropdown-menu" role="menu">
                               <li><a href="about.html">Quantum</a></li>
                               <li><a href="team.html">Equipe de travail</a></li>
-                              <li><a href="testimonials.html">Services rendus</a></li>
+                              <li><a href="projects.html">Services rendus</a></li>
                             </ul>
                         </li>
 
@@ -161,7 +161,7 @@
                         </li>
               
                         <li class="nav-item ">
-                            <a href="projects.html" class="nav-link " >Projets</a>
+                            <a href="projects.html" class="nav-link " >Services rendus</a>
                         </li>
 
                         <li class="nav-item">
@@ -200,18 +200,19 @@
   </header>
   <!--/ Header end -->
 
+
 <div id="banner-area" class="banner-area" style="background-image:url(images/banner/banner1.jpg)">
   <div class="banner-text">
     <div class="container">
         <div class="row">
           <div class="col-lg-12">
               <div class="banner-heading">
-                <h1 class="banner-title">About</h1>
+                <h1 class="banner-title">Presentation</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center">
-                      <li class="breadcrumb-item"><a href="#">Home</a></li>
-                      <li class="breadcrumb-item"><a href="#">company</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">About Us</li>
+                      <li class="breadcrumb-item"><a href="#">Accueil</a></li>
+                      <li class="breadcrumb-item"><a href="#">Quantum</a></li>
+                      <li class="breadcrumb-item active" aria-current="page">Qui sommes-nous</li>
                     </ol>
                 </nav>
               </div>
@@ -225,8 +226,8 @@
   <div class="container">
     <div class="row">
         <div class="col-lg-6">
-          <h3 class="column-title">Who We Are</h3>
-          <p>when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin.</p>
+          <h3 class="column-title">Qui sommes nous</h3>
+          <p>Suspendisse condimentum sapien a ex aliquet egestas. Sed auctor, neque ac rhoncus commodo, ligula lacus gravida orci, tempus sollicitudin magna ante ultricies velit</p>
           <blockquote><p>Semporibus autem quibusdam et aut officiis debitis aut rerum est aut optio cumque nihil necessitatibus autemn ec tincidunt nunc posuere ut</p></blockquote>
           <p>He lay on his armour-like  back, and if he lifted. ultrices ultrices sapien, nec tincidunt nunc posuere ut. Lorem ipsum dolor sit amet, consectetur adipiscing elit. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn’t anything embarrassing.</p>
 
@@ -240,7 +241,7 @@
                 <div class="container">
                     <div class="box-slider-content">
                       <div class="box-slider-text">
-                          <h2 class="box-slide-title">Leadership</h2>
+                          <h2 class="box-slide-title">Valeur 1</h2>
                       </div>    
                     </div>
                 </div>
@@ -250,7 +251,7 @@
                 <div class="container">
                     <div class="box-slider-content">
                       <div class="box-slider-text">
-                          <h2 class="box-slide-title">Relationships</h2>
+                          <h2 class="box-slide-title">Valeur 2</h2>
                       </div>    
                     </div>
                 </div>
@@ -260,7 +261,7 @@
                 <div class="container">
                     <div class="box-slider-content">
                       <div class="box-slider-text">
-                          <h2 class="box-slide-title">Performance</h2>
+                          <h2 class="box-slide-title">Valeur 3</h2>
                       </div>    
                     </div>
                 </div>
@@ -281,31 +282,31 @@
         <div class="row">
           <div class="col-md-3 col-sm-6 ts-facts">
               <div class="ts-facts-img">
-                <img loading="lazy" src="images/icon-image/fact1.png" alt="facts-img">
+                <img loading="lazy" src="images/icon-image/fact3.png" alt="facts-img">
               </div>
               <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="1789">0</span></h2>
-                <h3 class="ts-facts-title">Total Projects</h3>
+                <h2 class="ts-facts-num">+<span class="counterUp" data-count="20">0</span></h2>
+                <h3 class="ts-facts-title">Années D'expertise</h3>
               </div>
           </div><!-- Col end -->
 
           <div class="col-md-3 col-sm-6 ts-facts mt-5 mt-sm-0">
               <div class="ts-facts-img">
-                <img loading="lazy" src="images/icon-image/fact2.png" alt="facts-img">
+                <img loading="lazy" src="images/icon-image/fact1.png" alt="facts-img">
               </div>
               <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="647">0</span></h2>
-                <h3 class="ts-facts-title">Staff Members</h3>
+                <h2 class="ts-facts-num">+<span class="counterUp" data-count="100">0</span></h2>
+                <h3 class="ts-facts-title">Projets Réalisés</h3>
               </div>
           </div><!-- Col end -->
 
           <div class="col-md-3 col-sm-6 ts-facts mt-5 mt-md-0">
               <div class="ts-facts-img">
-                <img loading="lazy" src="images/icon-image/fact3.png" alt="facts-img">
+                <img loading="lazy" src="images/icon-image/fact2.png" alt="facts-img">
               </div>
               <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="4000">0</span></h2>
-                <h3 class="ts-facts-title">Hours of Work</h3>
+                <h2 class="ts-facts-num">+<span class="counterUp" data-count="20">0</span></h2>
+                <h3 class="ts-facts-title">Fournisseurs</h3>
               </div>
           </div><!-- Col end -->
 
@@ -314,8 +315,8 @@
                 <img loading="lazy" src="images/icon-image/fact4.png" alt="facts-img">
               </div>
               <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="44">0</span></h2>
-                <h3 class="ts-facts-title">Countries Experience</h3>
+                <h2 class="ts-facts-num">+<span class="counterUp" data-count="10">0</span></h2>
+                <h3 class="ts-facts-title">Certificats</h3>
               </div>
           </div><!-- Col end -->
 
@@ -330,8 +331,8 @@
   <div class="container">
     <div class="row text-center">
         <div class="col-lg-12">
-          <h2 class="section-title">Quality Service</h2>
-          <h3 class="section-sub-title">Professional Team</h3>
+          <h2 class="section-title">Service de qualité</h2>
+          <h3 class="section-sub-title">Equipe de professionnels</h3>
         </div>
     </div><!--/ Title row end -->
 
@@ -344,8 +345,8 @@
                       <img loading="lazy" class="w-100" src="images/team/team1.jpg" alt="team-img">
                     </div>
                     <div class="ts-team-content">
-                      <h3 class="ts-name">Nats Stenman</h3>
-                      <p class="ts-designation">Chief Operating Officer</p>
+                      <h3 class="ts-name">Nom Prénoms</h3>
+                      <p class="ts-designation">Poste</p>
                       <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
                       <div class="team-social-icons">
                           <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -363,8 +364,8 @@
                       <img loading="lazy" class="w-100" src="images/team/team2.jpg" alt="team-img">
                     </div>
                     <div class="ts-team-content">
-                      <h3 class="ts-name">Angela Lyouer</h3>
-                      <p class="ts-designation">Innovation Officer</p>
+                      <h3 class="ts-name">Nom Prénoms</h3>
+                      <p class="ts-designation">Poste</p>
                       <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
                       <div class="team-social-icons">
                           <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -381,8 +382,8 @@
                       <img loading="lazy" class="w-100" src="images/team/team3.jpg" alt="team-img">
                     </div>
                     <div class="ts-team-content">
-                      <h3 class="ts-name">Mark Conter</h3>
-                      <p class="ts-designation">Safety Officer</p>
+                      <h3 class="ts-name">Nom Prénoms</h3>
+                      <p class="ts-designation">Poste</p>
                       <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
                       <div class="team-social-icons">
                           <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
@@ -399,8 +400,8 @@
                       <img loading="lazy" class="w-100" src="images/team/team4.jpg" alt="team-img">
                     </div>
                     <div class="ts-team-content">
-                      <h3 class="ts-name">Ayesha Stewart</h3>
-                      <p class="ts-designation">Finance Officer</p>
+                      <h3 class="ts-name">Nom Prénoms</h3>
+                      <p class="ts-designation">Poste</p>
                       <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
                       <div class="team-social-icons">
                           <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -418,8 +419,8 @@
                       <img loading="lazy" class="w-100" src="images/team/team5.jpg" alt="team-img">
                     </div>
                     <div class="ts-team-content">
-                      <h3 class="ts-name">Dave Clarkte</h3>
-                      <p class="ts-designation">Civil Engineer</p>
+                      <h3 class="ts-name">Nom Prénoms</h3>
+                      <p class="ts-designation">Poste</p>
                       <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
                       <div class="team-social-icons">
                           <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
@@ -436,8 +437,8 @@
                       <img loading="lazy" class="w-100" src="images/team/team6.jpg" alt="team-img">
                     </div>
                     <div class="ts-team-content">
-                      <h3 class="ts-name">Elton Joe</h3>
-                      <p class="ts-designation">Site Supervisor</p>
+                      <h3 class="ts-name">Nom Prénoms</h3>
+                      <p class="ts-designation">Poste</p>
                       <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
                       <div class="team-social-icons">
                           <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
