--- a/theme/index.html
+++ b/theme/index.html
@@ -11,10 +11,8 @@
   <!-- Mobile Specific Metas
 ================================================== -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Construction Html5 Template">
+  <meta name="description" content="Servicse informatiques">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name=author content="Themefisher">
-  <meta name=generator content="Themefisher Constra HTML Template v1.0">
 
   <!-- Favicon
 ================================================== -->
@@ -151,7 +149,7 @@
                               <ul class="dropdown-menu" role="menu">
                                 <li><a href="about.html">Quantum</a></li>
                                 <li><a href="team.html">Equipe de travail</a></li>
-                                <li><a href="testimonials.html">Services rendus</a></li>
+                                <li><a href="projects.html">Services rendus</a></li>
                               </ul>
                           </li>
 
@@ -160,7 +158,7 @@
                           </li>
                 
                           <li class="nav-item ">
-                              <a href="projects.html" class="nav-link " >Projets</a>
+                              <a href="projects.html" class="nav-link " >Services rendus</a>
                           </li>
 
                           <li class="nav-item">
@@ -205,8 +203,8 @@
             <div class="container h-100">
               <div class="row align-items-center h-100">
                   <div class="col-md-12 text-center">
-                    <h2 class="slide-title" data-animation-in="slideInLeft">17 Years of excellence in</h2>
-                    <h3 class="slide-sub-title" data-animation-in="slideInRight">Construction Industry</h3>
+                    <h2 class="slide-title" data-animation-in="slideInLeft">Nam ac lacus at urna aliqu</h2>
+                    <h3 class="slide-sub-title" data-animation-in="slideInRight">aliquam vulputate</h3>
                     <p data-animation-in="slideInLeft" data-duration-in="1.2">
                       <a href="services.html" class="slider btn btn-primary border">En Savoir Plus</a>
                       <a href="contact.html" class="slider btn btn-primary ">Contactez Nous</a>
@@ -223,8 +221,8 @@
             <div class="container h-100">
               <div class="row align-items-center h-100">
                   <div class="col-md-12 text-center">
-                    <h2 class="slide-title" data-animation-in="slideInLeft">World Class Service</h2>
-                    <h3 class="slide-sub-title" data-animation-in="slideInRight">When Service Matters</h3>
+                    <h2 class="slide-title" data-animation-in="slideInLeft">dui non imperdiet sagittis</h2>
+                    <h3 class="slide-sub-title" data-animation-in="slideInRight">Aliquam malesuada lectus ex dapibus ligula</h3>
                     <p data-animation-in="slideInLeft" data-duration-in="1.2">
                         <a href="services.html" class="slider btn btn-primary border">En Savoir Plus</a>
                         <a href="contact.html" class="slider btn btn-primary ">Contactez Nous</a>
@@ -240,8 +238,8 @@
             <div class="container h-100">
               <div class="row align-items-center h-100">
                   <div class="col-md-12 text-center">
-                    <h2 class="slide-title" data-animation-in="slideInLeft">Meet Our Engineers</h2>
-                    <h3 class="slide-sub-title" data-animation-in="slideInRight">We believe sustainability</h3>
+                    <h2 class="slide-title" data-animation-in="slideInLeft">luctus et ultrices posuere cubilia </h2>
+                    <h3 class="slide-sub-title" data-animation-in="slideInRight">non scelerisque velit feugiat</h3>
                     <p data-animation-in="slideInLeft" data-duration-in="1.2">
                       <a href="services.html" class="slider btn btn-primary border">En Savoir Plus</a>
                       <a href="contact.html" class="slider btn btn-primary ">Contactez Nous</a>
@@ -578,7 +576,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">Capital Teltway Building</a>
+                        <a href="projects-single.html"> tortor pretium dictum</a>
                       </h3>
                       <p class="project-cat">Réseau, Autre</p>
                     </div>
@@ -595,7 +593,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">Ghum Touch Hospital</a>
+                        <a href="projects-single.html">Nulla ex purus</a>
                       </h3>
                       <p class="project-cat">Autres</p>
                     </div>
@@ -612,7 +610,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">TNT East Facility</a>
+                        <a href="projects-single.html">dui non imperdiet sagittis</a>
                       </h3>
                       <p class="project-cat">Formation</p>
                     </div>
@@ -629,7 +627,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">Narriot Headquarters</a>
+                        <a href="projects-single.html">id ornare neque metus ac</a>
                       </h3>
                       <p class="project-cat">Formation</p>
                     </div>
@@ -646,7 +644,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">Kalas Metrorail</a>
+                        <a href="projects-single.html">Nulla ex purus</a>
                       </h3>
                       <p class="project-cat">Distribution</p>
                     </div>
@@ -663,7 +661,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">Ancraft Avenue House</a>
+                        <a href="projects-single.html">nisl sed nunc suscipit</a>
                       </h3>
                       <p class="project-cat">Consultance</p>
                     </div>
