--- a/theme/index.html
+++ b/theme/index.html
@@ -612,7 +612,7 @@
                       <h3 class="project-item-title">
                         <a href="projects-single.html">dui non imperdiet sagittis</a>
                       </h3>
-                      <p class="project-cat">Formation</p>
+                      <p class="project-cat">Formation , Reseau</p>
                     </div>
                   </div>
                 </div>
